gccida/c0/emit_cmp_and_jump_insns
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_cmp_and_jump_insns/src/optabs.c:3819:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code comparison, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_cmp_and_jump_insns/src/optabs.c:3821:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_cmp_and_jump_insns/src/optabs.c:3828:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+2Ch] [rbp-24h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_cmp_and_jump_insns/src/optabs.c:3830:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code comparisona; // [rsp+3Ch] [rbp-14h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_cmp_and_jump_insns/src/optabs.c:3842:6: error: use of undeclared identifier 'QTextBlock'
if ( QTextBlock::operator<( x, y) ) 
     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_cmp_and_jump_insns/src/obj/optabs.o] Error 1
